26/10/2010 version 0.2.0
* added include_at_top, replace_module, module_move_up, etc
25/10/2010 version 0.1.0
* release!