@@ -1,3 +1,7 @@
+27/10/2010
+* added tests
+* reversed order of arguments for #include_at
+* made it so first index of #include_at is 1 (not 0, since 0 is host module)
 26/10/2010 version 0.2.0
 * added include_at_top, replace_module, module_move_up, etc
 25/10/2010 version 0.1.0
